--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-native": "0.63.3",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
-    "react-native-status-bar-height": "^2.6.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-webview": "^11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -28,6 +30,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-loading-spinner-overlay": "^0.5.2",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
