--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-webview": "^11.0.2"
   },
