--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+
+MYAPP_UPLOAD_STORE_FILE=aaa.keystore
+MYAPP_UPLOAD_KEY_ALIAS=aaa
+MYAPP_UPLOAD_STORE_PASSWORD=1nf0rm4t1c4
+MYAPP_UPLOAD_KEY_PASSWORD=1nf0rm4t1c4
