--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "^2.16.1",
     "react-native-simple-toast": "^1.1.3",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-webview": "^11.0.2"
+    "react-native-webview": "^11.0.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
