--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     splits {
         abi {
             reset()
